tests/baselines/reference/indexSignatureWithAccessibilityModifier.errors.txt
==== tests/cases/compiler/indexSignatureWithAccessibilityModifier.ts (2 errors) ====
    interface I {
        [public x: string]: string;
         ~~~~~~~~~~~~~~~~
!!! error TS1018: Index signature parameter cannot have accessibility modifiers.
    }
    
    class C {
        [public x: string]: string
         ~~~~~~~~~~~~~~~~
!!! error TS1018: Index signature parameter cannot have accessibility modifiers.
    }